--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
-	<meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<pre id="io"></pre>
-	<textarea id="prompt"></textarea>
-	<script src="esercitazioni con i radianti.js"></script>
+    <div class="container">
+        <p class="prompt-container">
+            Domanda
+            <br>
+            <span id="prompt">??????????!</span>
+        </p>
+        <br>
+        <p class="input-container">
+            Risposta
+            <br>
+            
+            <textarea id="input"></textarea>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
