--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <p class="prompt-container">
-            Domanda
+        <div class="prompt-container">
+            <p id="prompt-title">Domanda</p>
             <br>
-            <span id="prompt">??????????!</span>
-        </p>
-        <br>
-        <p class="input-container">
-            Risposta
+            <p id="prompt">??????????!</p>
+        </div>
+        <div class="input-container">
+            <p id="input-title">Risposta</p>
             <br>
-            
             <textarea id="input"></textarea>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
