--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <div class="container">
         <div class="prompt-container">
-            <p id="prompt-title">Domanda</p>
+            <p id="prompt-title">Titolo domanda</p>
             <br>
-            <p id="prompt">??????????!</p>
+            <p id="prompt">Domanda</p>
         </div>
         <div class="input-container">
             <p id="input-title">Risposta</p>
             <br>
             <textarea id="input"></textarea>
         </div>
+        <div class="memo">Per indicare che <b>tan(x) non esiste</b> scrivere '-'. Nelle <b>identità trigonometriche</b> omettere l'argomento.</div>
     </div>
     <script src="main.js"></script>
 </body>
