--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <br>
             <textarea id="input"></textarea>
         </div>
-        <div class="memo">Per indicare che <b>tan(x) non esiste</b> scrivere '-'. Nelle <b>identità trigonometriche</b> omettere l'argomento.</div>
+        <div class="memo">Per indicare che <b>tan(x) non esiste</b> scrivere '-'. Nelle <b>identità trigonometriche</b> omettere l'argomento.<br>La risposta viene convertita in <b>minuscolo</b>. Le domande con <b>=*</b> hanno più risposte equivalenti.</div>
     </div>
     <script src="main.js"></script>
 </body>
