--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <tr>
             <td id="prompt"></td>
             <td>
-                <textarea id="input" placeholder="Inserire qui la risposta..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
+                <textarea id="input" placeholder="Inserire qui la risposta..." autocomplete="off" autocorrect="off" spellcheck="false" autocapitalize="off" autofocus></textarea>
             </td>
         </tr>
         <tr>
