--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto+Slab&display=swap" rel="stylesheet"> 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <table>
@@ -23,9 +25,11 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">Per indicare che <b>tan(x) non esiste</b> scrivere '-' oppure 'ne'. Nelle <b>identità trigonometriche</b> omettere l'argomento, cioè non scrivere (x).<br>La risposta viene convertita in <b>minuscolo</b>. Le domande con <b>=*</b> hanno più risposte equivalenti. Rispondere premendo Enter. <b>v</b> viene traformato in <b>√</b>, <b>*</b> viene traformato in <b>^</b>. </td>
+            <td colspan="2">Per indicare che <b>tan(x) non esiste</b> scrivere '-' oppure 'ne'. Nelle <b>identità trigonometriche</b> omettere l'argomento, cioè non scrivere (x).<br>La risposta viene convertita in <b>minuscolo</b>. Le domande con <b>=*</b> hanno più risposte equivalenti. Rispondere premendo Enter. <b>v</b> viene traformato in <b>√</b>, <b>*</b> viene traformato in <b>^</b>. Scrivere <b>skip</b> per saltare la domanda. </td>
         </tr>
     </table>
+
+
     <script src="main.js"></script>
 </body>
 </html>
