--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">Per indicare che <b>tan(x) non esiste</b> scrivere '-' oppure 'ne'. Nelle <b>identità trigonometriche</b> omettere l'argomento, cioè non scrivere (x).<br>La risposta viene convertita in <b>minuscolo</b>. Le domande con <b>=*</b> hanno più risposte equivalenti. Rispondere premendo Enter. <b>v</b> viene traformato in <b>√</b>, <b>*</b> viene traformato in <b>^</b>. Scrivere <b>skip</b> per saltare la domanda. </td>
+            <td colspan="2">Per indicare che <b>tan(x) non esiste</b> scrivere '-' oppure 'ne'. Nelle <b>identità trigonometriche</b> omettere l'argomento, cioè non scrivere (x).<br>La risposta viene convertita in <b>minuscolo</b>. Le domande con <b>=*</b> hanno più risposte equivalenti. Rispondere premendo Enter. <b>v</b> viene traformato in <b>√</b>, <b>*</b> viene traformato in <b>^</b>. Scrivere <b>skip</b> oppure <b>s</b> per saltare la domanda. </td>
         </tr>
     </table>
 
