--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <table>
         <tr>
             <td id="prompt-title"></td>
-            <td id="input-title"></td>
+            <td id="answer-title"></td>
         </tr>
         <tr>
-            <td id="prompt"></td>
-            <td>
-                <textarea id="input" placeholder="Inserire qui la risposta..." autocomplete="off" autocorrect="off" spellcheck="false" autocapitalize="off" autofocus></textarea>
+            <td id="prompt-text"></td>
+            <td id="answer-container">
+                <textarea id="answer-input" placeholder="Inserire qui la risposta..." autocomplete="off" autocorrect="off" spellcheck="false" autocapitalize="off" autofocus></textarea>
             </td>
         </tr>
         <tr>
